--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="refresh" content="0; url=https://eljimenez5.github.io/DragonBall/" />
+    <meta http-equiv="refresh" content="5; url=https://eljimenez5.github.io/DragonBall/" />
     <title>Redirigiendo...</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2147238078601237" crossorigin="anonymous"></script>
   </head>
   <body>
     <p>Si no eres redirigido automáticamente, haz clic <a href="https://eljimenez5.github.io/DragonBall/">aquí</a>.</p>
   </body>
 </html>
+
