--- a/index.html
+++ b/index.html
@@ -2,12 +2,20 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="refresh" content="5; url=https://eljimenez5.github.io/DragonBall/" />
+    <meta http-equiv="refresh" content="10; url=https://eljimenez5.github.io/DragonBall/" />
     <title>Redirigiendo...</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2147238078601237" crossorigin="anonymous"></script>
   </head>
   <body>
     <p>Si no eres redirigido automáticamente, haz clic <a href="https://eljimenez5.github.io/DragonBall/">aquí</a>.</p>
+    <h1>Bienvenido a eljimenez5.github.io</h1>
+<p>Este es el portal principal de mis proyectos web.</p>
+<ul>
+  <li><a href="/DragonBall/">Dragon Ball</a></li>
+  <li><a href="/Naruto/">Naruto</a></li>
+</ul>
+<p>Explora y disfruta. ¡Gracias por tu visita!</p>
   </body>
 </html>
+
 
